src/tests/snapshots/swayward__tests__window_opening__check_target_size.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
